--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#project ignore files
+*.settings
+*.project
+*.classpath
+*.girignore
+*target
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
